--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "iview": "^3.5.4",
     "less": "^4.1.1",
-    "less-loader": "^8.1.1",
+    "less-loader": "^5.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
