--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "iview": "^3.5.4",
     "less": "^4.1.1",
     "less-loader": "^5.0.0",
+    "mockjs": "^1.1.0",
+    "throttle-debounce": "^3.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
