--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "throttle-debounce": "^3.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-smooth-picker": "^0.4.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
